Fixed bodtText populating to cell

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -16,21 +16,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="2TJ-wD-Chk">
-                                <rect key="frame" x="10" y="88" width="394" height="354"/>
+                                <rect key="frame" x="20" y="108" width="374" height="354"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Entry Text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DuD-Ws-D1K">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDE-wG-biT">
-                                        <rect key="frame" x="0.0" y="46" width="394" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="46" width="374" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Tgs-N0-k8X">
-                                        <rect key="frame" x="0.0" y="78.5" width="394" height="32"/>
+                                        <rect key="frame" x="0.0" y="78.5" width="374" height="32"/>
                                         <segments>
                                             <segment title="😃  "/>
                                             <segment title="😐"/>
@@ -38,13 +38,13 @@
                                         </segments>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bT-M7-rPz">
-                                        <rect key="frame" x="0.0" y="121.5" width="394" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="121.5" width="374" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MBi-mn-SFy">
-                                        <rect key="frame" x="0.0" y="154" width="394" height="200"/>
+                                        <rect key="frame" x="0.0" y="154" width="374" height="200"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="200" id="hip-Xh-TWP"/>
@@ -58,9 +58,9 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="2TJ-wD-Chk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="3iD-hy-oaK"/>
-                            <constraint firstItem="2TJ-wD-Chk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Kmm-Mu-tqV"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2TJ-wD-Chk" secondAttribute="trailing" constant="10" id="h4t-Hp-mVT"/>
+                            <constraint firstItem="2TJ-wD-Chk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="3iD-hy-oaK"/>
+                            <constraint firstItem="2TJ-wD-Chk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Kmm-Mu-tqV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2TJ-wD-Chk" secondAttribute="trailing" constant="20" id="h4t-Hp-mVT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -96,21 +96,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="OwY-bm-os9">
-                                <rect key="frame" x="10" y="108" width="394" height="354"/>
+                                <rect key="frame" x="20" y="108" width="374" height="354"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Entry Text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RhU-Do-pWR">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iwt-5j-JNq">
-                                        <rect key="frame" x="0.0" y="46" width="394" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="46" width="374" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="X6o-Y6-YFS">
-                                        <rect key="frame" x="0.0" y="78.5" width="394" height="32"/>
+                                        <rect key="frame" x="0.0" y="78.5" width="374" height="32"/>
                                         <segments>
                                             <segment title="😃  "/>
                                             <segment title="😐"/>
@@ -118,13 +118,13 @@
                                         </segments>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZA-nH-iWc">
-                                        <rect key="frame" x="0.0" y="121.5" width="394" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="121.5" width="374" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yXX-LW-gsP">
-                                        <rect key="frame" x="0.0" y="154" width="394" height="200"/>
+                                        <rect key="frame" x="0.0" y="154" width="374" height="200"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="200" id="n0M-Mu-ShF"/>
@@ -138,8 +138,9 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="wte-ZS-4Gx" firstAttribute="trailing" secondItem="OwY-bm-os9" secondAttribute="trailing" constant="20" id="Qro-S0-K2E"/>
                             <constraint firstItem="OwY-bm-os9" firstAttribute="top" secondItem="wte-ZS-4Gx" secondAttribute="top" constant="20" id="xW8-rX-QcM"/>
-                            <constraint firstItem="OwY-bm-os9" firstAttribute="leading" secondItem="wte-ZS-4Gx" secondAttribute="leading" constant="10" id="xXN-29-hN7"/>
+                            <constraint firstItem="OwY-bm-os9" firstAttribute="leading" secondItem="wte-ZS-4Gx" secondAttribute="leading" constant="20" id="xXN-29-hN7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wte-ZS-4Gx"/>
                     </view>
@@ -173,17 +174,17 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="foX-C7-swH">
                                             <rect key="frame" x="10" y="10" width="394" height="48"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="S0B-bT-hkE">
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="S0B-bT-hkE">
                                                     <rect key="frame" x="0.0" y="0.0" width="394" height="24"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hny-od-HGP">
-                                                            <rect key="frame" x="0.0" y="0.0" width="305" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hny-od-HGP">
+                                                            <rect key="frame" x="0.0" y="0.0" width="133.5" height="24"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" ambiguous="YES" text="TimeStamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBb-1z-7Cr">
-                                                            <rect key="frame" x="320" y="0.0" width="74" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="TimeStamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBb-1z-7Cr">
+                                                            <rect key="frame" x="141.5" y="0.0" width="252.5" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -210,7 +211,7 @@
                                     <outlet property="bodyTextLabel" destination="U2N-KE-e7q" id="Q2W-Js-gxW"/>
                                     <outlet property="timeStampLabel" destination="aBb-1z-7Cr" id="nWE-wA-v3p"/>
                                     <outlet property="titleLabel" destination="Hny-od-HGP" id="LL7-2i-94F"/>
-                                    <segue destination="vFI-cq-ByA" kind="show" id="sxs-aM-D7K"/>
+                                    <segue destination="vFI-cq-ByA" kind="show" identifier="DetailSegue" id="sxs-aM-D7K"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
