--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -12,11 +12,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Dxw-gg-VXr">
-                                <rect key="frame" x="8" y="8" width="398" height="337.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Dxw-gg-VXr">
+                                <rect key="frame" x="8" y="96" width="398" height="269.5"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IPJ-M7-9xE">
                                         <rect key="frame" x="0.0" y="0.0" width="398" height="34"/>
@@ -24,27 +24,32 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FSL-a8-CZZ">
-                                        <rect key="frame" x="0.0" y="49" width="398" height="288.5"/>
+                                        <rect key="frame" x="0.0" y="35" width="398" height="234.5"/>
                                         <subviews>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dLp-Kf-tBH">
+                                                <rect key="frame" x="0.0" y="0.0" width="398" height="32"/>
+                                                <segments>
+                                                    <segment title="Ecstatic"/>
+                                                    <segment title="Dejected"/>
+                                                    <segment title="Meh"/>
+                                                </segments>
+                                            </segmentedControl>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mW4-op-s5D">
-                                                <rect key="frame" x="0.0" y="0.0" width="398" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="39" width="398" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hYc-A7-3QQ">
-                                                <rect key="frame" x="0.0" y="28.5" width="398" height="2"/>
+                                                <rect key="frame" x="0.0" y="67.5" width="398" height="2"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="2" id="463-y3-f6b"/>
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cnE-mt-ko6">
-                                                <rect key="frame" x="0.0" y="38.5" width="398" height="250"/>
+                                                <rect key="frame" x="0.0" y="77.5" width="398" height="157"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="250" id="ZZc-RJ-gyL"/>
-                                                </constraints>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -58,6 +63,7 @@
                         <constraints>
                             <constraint firstItem="Dxw-gg-VXr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="4Hc-sz-oOf"/>
                             <constraint firstItem="Dxw-gg-VXr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="Roy-wX-r4X"/>
+                            <constraint firstItem="Dxw-gg-VXr" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.300781" id="buH-dt-jI7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dxw-gg-VXr" secondAttribute="trailing" constant="8" id="iSK-zs-pSL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -75,13 +81,14 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="entryTextView" destination="cnE-mt-ko6" id="5zP-p2-ZWl"/>
-                        <outlet property="titleTextField" destination="IPJ-M7-9xE" id="yMo-ho-qqV"/>
+                        <outlet property="entryTextView" destination="cnE-mt-ko6" id="Eyp-Hk-3bw"/>
+                        <outlet property="segmentedControl" destination="dLp-Kf-tBH" id="156-U8-uGZ"/>
+                        <outlet property="titleTextField" destination="IPJ-M7-9xE" id="dEO-Rn-E8m"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="850.72463768115949" y="138.61607142857142"/>
+            <point key="canvasLocation" x="808.69565217391312" y="154.6875"/>
         </scene>
         <!--Journal-->
         <scene sceneID="qGw-pI-reE">
@@ -146,7 +153,7 @@
                                     <outlet property="dateLabel" destination="Vbc-iT-IlA" id="hyi-VP-Aeh"/>
                                     <outlet property="entryLabel" destination="m9F-0r-ndE" id="7tg-hy-TAX"/>
                                     <outlet property="titleLabel" destination="oTH-uJ-OAK" id="Uez-xl-j2O"/>
-                                    <segue destination="BYZ-38-t0r" kind="showDetail" identifier="ShowEntry" id="fz1-VE-Wj9"/>
+                                    <segue destination="SSz-pw-egY" kind="show" identifier="EntryDetailSegue" id="5hk-tw-OdF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -166,6 +173,76 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zhf-Os-3ld" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-707.24637681159425" y="155.35714285714286"/>
+        </scene>
+        <!--Entry Details-->
+        <scene sceneID="xut-Yj-K5w">
+            <objects>
+                <viewController title="Entry Details" id="SSz-pw-egY" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8rm-X7-gK0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="grf-Cl-X8l">
+                                <rect key="frame" x="20" y="140" width="374" height="358.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bkB-T1-Lly">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="132"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FgW-9Q-r6b">
+                                        <rect key="frame" x="0.0" y="147" width="374" height="211.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="SY6-P6-eUm">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="75.5"/>
+                                                <subviews>
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8rM-ol-bqa">
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                                        <segments>
+                                                            <segment title="Ecstatic"/>
+                                                            <segment title="Dejected"/>
+                                                            <segment title="Meh"/>
+                                                        </segments>
+                                                    </segmentedControl>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5v-VH-3uJ">
+                                                        <rect key="frame" x="0.0" y="55" width="374" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Pht-sk-RaV">
+                                                <rect key="frame" x="0.0" y="83.5" width="374" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="grf-Cl-X8l" firstAttribute="top" secondItem="fSX-8Z-oFF" secondAttribute="top" constant="20" id="7lU-LN-sus"/>
+                            <constraint firstItem="grf-Cl-X8l" firstAttribute="height" secondItem="8rm-X7-gK0" secondAttribute="height" multiplier="0.4" id="eS6-1S-pPJ"/>
+                            <constraint firstItem="fSX-8Z-oFF" firstAttribute="trailing" secondItem="grf-Cl-X8l" secondAttribute="trailing" constant="20" id="oDX-7q-VcS"/>
+                            <constraint firstItem="grf-Cl-X8l" firstAttribute="leading" secondItem="fSX-8Z-oFF" secondAttribute="leading" constant="20" id="olZ-2q-I6h"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fSX-8Z-oFF"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="ejI-ef-9fN"/>
+                    <connections>
+                        <outlet property="entryTextView" destination="Pht-sk-RaV" id="J8L-KL-aqb"/>
+                        <outlet property="journalTitle" destination="bkB-T1-Lly" id="90L-SW-l0L"/>
+                        <outlet property="segmentedControl" destination="8rM-ol-bqa" id="6Vp-Om-lJy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mrv-Cr-eaY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-707" y="881"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jSp-fc-x6s">
@@ -201,12 +278,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A5I-MB-O9N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30" y="519"/>
+            <point key="canvasLocation" x="46" y="155"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="fz1-VE-Wj9"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <image name="plus.square" catalog="system" width="128" height="114"/>
     </resources>
