fixed show detail segue

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -148,7 +148,7 @@
                                     <outlet property="entryDate" destination="JdF-1D-0Hk" id="idF-ws-vC5"/>
                                     <outlet property="entryDes" destination="a0l-bE-Snx" id="ZZN-zy-XjT"/>
                                     <outlet property="entryTitle" destination="Zk6-n1-eDk" id="n0X-1t-TbR"/>
-                                    <segue destination="JOY-Cs-INQ" kind="show" identifier="showDetail" trigger="accessoryAction" id="7Av-3p-8ui"/>
+                                    <segue destination="JOY-Cs-INQ" kind="show" identifier="showDetail" id="T85-xf-3YF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
